--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.database=POSTGRESQL
 #spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Livraria
+spring.datasource.url=jdbc:postgresql://localhost:5432/livraria
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=12345
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 #spring.profiles.active=dev
