--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.typesafe.play</groupId>
+			<artifactId>play-java-jpa_2.10</artifactId>
+			<version>2.4.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
